Changelog for seoPro.


seoPro 2.0.0
==============
- Added several lexicons
- Added system setting for divider
- 