@@ -1,8 +1,20 @@
 --------------------
 seoPro
 --------------------
-Version: 2.0.0
+Version: 1.0.0 PL
 Author: Wieger Sloot <wieger@sterc.nl>
+Support: Friso Speulman <friso@sterc.nl>
 --------------------
 
-A basic SEO addon for MODx Revolution.
+
+MODX SEO Pro is a MODX package that helps you when performing Search Engine Optimization (SEO) in MODX. It enables you to:
+- Enter focus keywords for your page
+- Optimize your pagetitle (Title), longitle (SEO Title), description (META Description) and alias (URL) by counting if your focus keywords are used in these fields.
+- Up next: optimize your content
+
+
+Using a TV for the keywords?
+Use this gist to convert the TV values to seoPro https://gist.github.com/hometownlegends/7751607
+
+Bugs and Features:
+https://github.com/Sterc/SEOPro
