@@ -6,3 +6,7 @@ $_lang['seopro.tips'] = 'SEO-PRO Tips!';
 $_lang['seopro.focuskeywords'] = 'Focus keywords';
 $_lang['seopro.focuskeywords_desc'] = 'Vul uw keywords komma gescheiden in.';
 $_lang['seopro.prevbox'] = 'Voorbeeld in Google';
+$_lang['seopro.emptymetadescription']='<i>Vul een omschrijving in zodat een preview gemaakt kan worden.</i>';
+
+$_lang['setting_seopro.delimiter'] = 'Delimiter in Google preview.';
+$_lang['setting_seopro.delimiter_desc'] = 'Delimiter tussen  Titel en sitenaam';
